--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </style>
         
         <div class="logo">
-            <img src="MVT Horizontal.png" alt="Machine Vogue Logo">
+            <img src="MVIT Logo.png" alt="Machine Vogue Logo">
         </div>
         <ul class="links">
             <li class="nav-link"><a href="">ABOUT US</a>
